[package]
name = "shits"
version = "0.1.0"
description = "excel alt on terminal - ideal for vim users or TUI people"
authors = ["Paulo Lisecki <piokinovaes@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
